--- a/anther faile/sample/index.html
+++ b/anther faile/sample/index.html
@@ -1,180 +1,175 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8" />
-    <title>3Dモデル表示</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
+<head>
+  <meta charset="utf-8" />
+  <title>3Dモデル表示（同期対応）</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+    #info {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 10px 15px;
+      background-color: rgba(255, 255, 255, 0.8);
+      color: #000;
+      font-size: 14px;
+      font-family: sans-serif;
+      border-radius: 10px;
+      max-width: 300px;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
+
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBFXUDC3U2glx7UbkyigIYxGkSw9qhlYMU",
+      authDomain: "realtimesyncapp-3e1d6.firebaseapp.com",
+      databaseURL: "https://realtimesyncapp-3e1d6-default-rtdb.firebaseio.com",
+      projectId: "realtimesyncapp-3e1d6",
+      storageBucket: "realtimesyncapp-3e1d6.appspot.com",
+      messagingSenderId: "584295413541",
+      appId: "1:584295413541:web:20a5ae6fcb742cf09d0ccc",
+      measurementId: "G-5YNKMHK2NY"
+    };
+  </script>
+
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
+        "three/examples/jsm/loaders/GLTFLoader.js": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/loaders/GLTFLoader.js"
       }
-      #info {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        padding: 10px 15px;
-        background-color: rgba(255, 255, 255, 0.8);
-        color: #000;
-        font-size: 14px;
-        font-family: sans-serif;
-        border-radius: 10px;
-        max-width: 300px;
+    }
+  </script>
+
+  <script type="module">
+    import * as THREE from "three";
+    import { GLTFLoader } from "three/examples/jsm/loaders/GLTFLoader.js";
+
+    const urlParams = new URLSearchParams(window.location.search);
+    let roomID = urlParams.get("room");
+    if (!roomID) {
+      roomID = Math.random().toString(36).substring(2, 10);
+      history.replaceState(null, null, `?room=${roomID}`);
+    }
+    console.log("roomID:", roomID);
+
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 1.5, 5);
+
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const light = new THREE.DirectionalLight(0xffffff, 2);
+    light.position.set(0, 2, 1);
+    scene.add(light);
+
+    let model = null;
+    const loader = new GLTFLoader();
+    loader.load(
+      'https://dondenden.github.io/sample-education-system/application%20schedule/Research Models.glb',
+      (gltf) => {
+        model = gltf.scene;
+        scene.add(model);
+        tick();
+      },
+      undefined,
+      (error) => {
+        console.error("モデルの読み込みに失敗:", error);
       }
-      canvas {
-        display: block;
+    );
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
+    const connectionID = Math.random().toString(36).substring(2);
+    console.log("connectionID:", connectionID);
+
+    db.ref(`user/${roomID}/${connectionID}`).set({
+      camera: {
+        position: { x: 0, y: 1.5, z: 5 },
+        lookAt: { x: 0, y: 0, z: 0 }
       }
-    </style>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyBFXUDC3U2glx7UbkyigIYxGkSw9qhlYMU",
-        authDomain: "realtimesyncapp-3e1d6.firebaseapp.com",
-        databaseURL: "https://realtimesyncapp-3e1d6-default-rtdb.firebaseio.com",
-        projectId: "realtimesyncapp-3e1d6",
-        storageBucket: "realtimesyncapp-3e1d6.appspot.com",
-        messagingSenderId: "584295413541",
-        appId: "1:584295413541:web:20a5ae6fcb742cf09d0ccc",
-        measurementId: "G-5YNKMHK2NY"
-      };
-    </script>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
-          "three/examples/jsm/loaders/GLTFLoader.js": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/loaders/GLTFLoader.js"
-        }
-      }
-    </script>
-    <script type="module">
-      import * as THREE from "three";
-      import { GLTFLoader } from "three/examples/jsm/loaders/GLTFLoader.js";
+    });
 
-      //URLの作成
-      const urlParams = new URLSearchParams(window.location.search);
-      //roomIDの入手
-      let roomID = urlParams.get("room");
-      //roomIDの作成
-      if (!roomID) {
-        roomID = Math.random().toString(36).substring(2, 10);
-        history.replaceState(null, null, `?room=${roomID}`);
-      }
-      console.log("roomID:", roomID);
-
-      //Three.jsの作成
-      const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 1.5, 5);
-
-      const renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
-
-      const light = new THREE.DirectionalLight(0xffffff, 2);
-      light.position.set(0, 2, 1);
-      scene.add(light);
-
-      let model = null;
-      const loader = new GLTFLoader();
-      loader.load(
-        'https://dondenden.github.io/sample-education-system/application%20schedule/Research Models.glb',
-        (gltf) => {
-          model = gltf.scene;
-          scene.add(model);
-          tick();
-        },
-        undefined,
-        (error) => {
-          console.error("モデルの読み込みに失敗:", error);
-        }
-      );
-
-      //forebaseの宣言
-      firebase.initializeApp(firebaseConfig);
-      const db = firebase.database();
-
-      const connectionID = Math.random().toString(36).substring(2);
-      console.log("connectionID:", connectionID);
-
-      db.ref(`user/${roomID}/${connectionID}`).set({
-        camera: {
-          position: { x: 0, y: 1.5, z: 5 },
-          lookAt: { x: 0, y: 0, z: 0 }
-        }
+    document.addEventListener("keydown", (event) => {
+      db.ref(`user/${roomID}/${connectionID}/camera`).set({
+        position: camera.position,
+        lookAt: { x: 0, y: 0, z: 0 }
       });
 
-      db.ref(`user/${roomID}`).on("value", (snapshot) => {
-        const users = snapshot.val();
-        for (const id in users) {
-          if (id === connectionID) continue;
-          const userCam = users[id].camera;
-        }
+      // 🔄 共通キーに同期用データ送信
+      db.ref(`camerakey/${roomID}`).set({
+        key: event.key,
+        sender: connectionID
       });
 
-      document.addEventListener("keydown", (event) => {
-        db.ref(`user/${roomID}/${connectionID}/camera`).set({
-          position: camera.position,
-          lookAt: { x: 0, y: 0, z: 0 }
-        });
-        db.ref(`camerakey/${roomID}/${connectionID}`).set(event.key);
+      // 自分のカメラも動かす
+      applyCameraView(event.key);
+      console.log("入力結果の送信:", event.key);
+    });
 
-        if (event.key === "1") {
-          camera.position.set(0, 1.5, 5);
-          camera.lookAt(0, 1.5, 5);
-        } else if (event.key === "2") {
-          camera.position.set(0, 6.5, 5);
-          camera.lookAt(0, 0, 0);
-        } else if (event.key === "3") {
-          camera.position.set(0, -2.5, 5);
-          camera.lookAt(0, 0, 0);
-        } else if (event.key === "4") {
-          camera.position.set(4, 5, 4);
-          camera.lookAt(0, 0, 0);
-        }
-        console.log("入力結果の送信")
-      });
+    // 🔁 他人の入力を監視してカメラを動かす
+    db.ref(`camerakey/${roomID}`).on("value", (snapshot) => {
+      const data = snapshot.val();
+      if (!data) return;
 
-      db.ref(`camerakey/${roomID}`).on("value", (snapshot) => {
-        const key = snapshot.val();
-        console.log("結果の受信")
-        if (key === "1") {
-          camera.position.set(0, 1.5, 5);
-          camera.lookAt(0, 1.5, 5);
-          console.log("他人が１を押しています");
-        } else if (key === "2") {
-          camera.position.set(0, 6.5, 5);
-          camera.lookAt(0, 0, 0);
-        } else if (key === "3") {
-          camera.position.set(0, -2.5, 5);
-          camera.lookAt(0, 0, 0);
-        } else if (key === "4") {
-          camera.position.set(4, 5, 4);
-          camera.lookAt(0, 0, 0);
-        }
-      });
+      const key = data.key;
+      const sender = data.sender;
 
-      function tick() {
-        requestAnimationFrame(tick);
-        renderer.render(scene, camera);
+      if (sender === connectionID) return; // 自分はスキップ
+      console.log("他人の入力を受信:", key);
+
+      applyCameraView(key);
+    });
+
+    function applyCameraView(key) {
+      if (key === "1") {
+        camera.position.set(0, 1.5, 5);
+        camera.lookAt(0, 1.5, 0);
+      } else if (key === "2") {
+        camera.position.set(0, 6.5, 5);
+        camera.lookAt(0, 0, 0);
+      } else if (key === "3") {
+        camera.position.set(0, -2.5, 5);
+        camera.lookAt(0, 0, 0);
+      } else if (key === "4") {
+        camera.position.set(4, 5, 4);
+        camera.lookAt(0, 0, 0);
       }
+    }
 
-      // DOM構築完了後に roomID を表示
-      window.addEventListener("DOMContentLoaded", () => {
-        document.getElementById("output").textContent = `roomID: ${roomID}`;
-      });
+    function tick() {
+      requestAnimationFrame(tick);
+      renderer.render(scene, camera);
+    }
 
-      db.ref(`user/${roomID}/${connectionID}`).onDisconnect().remove();
-      db.ref(`camerakey/${roomID}/${connectionID}`).onDisconnect().remove();
-    </script>
-  </head>
-  <body>
-    <div id="info">
-      <strong>操作方法</strong><br>
-      - 1: 正面<br>
-      - 2: 上45度<br>
-      - 3: 下45度<br>
-      - 4: 右45度<br>
-      <p id="output">roomIDが入ります</p>
-    </div>
-  </body>
+    window.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("output").textContent = `roomID: ${roomID}`;
+    });
+
+    db.ref(`user/${roomID}/${connectionID}`).onDisconnect().remove();
+  </script>
+</head>
+
+<body>
+  <div id="info">
+    <strong>操作方法</strong><br>
+    - 1: 正面<br>
+    - 2: 上45度<br>
+    - 3: 下45度<br>
+    - 4: 右45度<br>
+    <p id="output">roomIDが入ります</p>
+  </div>
+</body>
 </html>
